Fix background collapse

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -2,7 +2,6 @@
   width: 100%;
   border-radius: 5px;
   margin-bottom: 20px;
-  background-color: #f7f7f7;
   cursor: pointer;
 
   div {
@@ -44,9 +43,10 @@
     }
   }
 }
-.test {
+.textCollapse {
   overflow: hidden;
   max-height: 450px;
+  background-color: #f7f7f7;
 }
 .hidden {
   max-height: 0px;
